[Travis] prevent build-again-and-again
Only build master and develop

[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ rvm:
 services: mysql
 before_script:
   - mysql -e 'create database kindergarten_test;'
+
+branches:
+  only:
+    - master
+    - develop
