--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: ruby
+before_install:
+  - gem install bundler
+
 rvm:
   - 1.9.3
   - 1.9.2
@@ -10,6 +13,7 @@ rvm:
   - jruby-head
   - 1.8.7
   - ree
+
 
 services: mysql
 before_script:
